--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,7 @@ code {
     monospace;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 8px;
 }
 
@@ -28,4 +28,4 @@ code {
 
 ::-webkit-scrollbar-thumb:hover {
   background: #105294;
-}
+} */
